Fixed various layout issues

--- a/public/style.css
+++ b/public/style.css
@@ -31,9 +31,6 @@ img {
 li.nav-item:hover {
   text-decoration: underline;
 }
-li#time:hover {
-  text-decoration: none;
-}
 p {
   font-size: 1em;
   text-align: left;
@@ -44,7 +41,7 @@ p {
   margin-left: 25%;
   margin-right: 25%;
   grid-gap: 40px;
-  grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 }
 .card {
   padding: 10px;
@@ -54,11 +51,13 @@ p {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-left: 25%;
-  margin-right: 25%;
+  /* need to set breakpoints */
+  margin-left: 5px;
+  margin-right: 5px;
   background-color: #37474f;
   border: 5px solid #62727b;
 }
+
 .nav-item {
   flex: 1 0 50px;
   max-width: 250px;
@@ -71,10 +70,6 @@ p {
 .nav-item:hover {
   background-color: #62727b;
 }
-.lang-dropdown {
-  list-style:none;
-  visibility: hidden;
-}
 .player-title {
   font-size: 1.2em;
 }
@@ -83,7 +78,8 @@ p {
   display: flex;
   justify-content: flex-end;
   align-self: flex-end;
-  margin-right: 40px;
+  margin-left: minmax(300px, 75%);
+  margin-right: 10px;
   padding-top: 5em;
 }
 
@@ -110,4 +106,11 @@ span#close-about {
 
 #time {
   margin-left: 20px;
+}
+
+@media screen and (min-width: 620px) {
+  .navbar {
+    margin-left: 25%;
+    margin-right: 25%;
+  }
 }
